force-app/main/default/objects/Account/fields/Como_trabaja__c.field-meta.xml
<CustomField>
    <fullName>Como_trabaja__c</fullName>
    <label>Cómo trabaja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Asignar</fullName>
                <default>true</default>
                <label>Sin Asignar</label>
            </value>
            <value>
                <fullName>Trabaja en equipo con KOL NICHO</fullName>
            </value>
            <value>
                <fullName>Está formando equipo</fullName>
            </value>
            <value>
                <fullName>Es referente dentro de la IISS</fullName>
            </value>
            <value>
                <fullName>Ninguna de las 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>