force-app/main/default/objects/Account/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>CASE(RecordType.Name, &apos;Paciente Best Care&apos;, &apos;5830|5770|5800&apos;,
&apos;Paciente Regular&apos;, &apos;5800|5770&apos;,
&apos;Paciente Partner&apos;, &apos;5830|5770|5800&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>