force-app/main/default/objects/Account/fields/Comprador_NEC__c.field-meta.xml
<CustomField>
    <fullName>Comprador_NEC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comprador NEC</label>
    <type>Checkbox</type>
</CustomField>