force-app/main/default/objects/Account/fields/Condici_n_IVA__c.field-meta.xml
<CustomField>
    <fullName>Condici_n_IVA__c</fullName>
    <label>Condición IVA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gravado (10,5%)</fullName>
            </value>
            <value>
                <fullName>No Gravado (0%)</fullName>
            </value>
            <value>
                <fullName>Gravado (21%)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>