force-app/main/default/objects/Account/fields/Consentimiento_ya_registrado__c.field-meta.xml
<CustomField>
    <fullName>Consentimiento_ya_registrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consentimiento ya registrado</label>
    <type>Checkbox</type>
</CustomField>