force-app/main/default/objects/Account/fields/Consentimientos_enviados__c.field-meta.xml
<CustomField>
    <fullName>Consentimientos_enviados__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Consentimientos enviados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>