force-app/main/default/objects/Account/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <formula>CASESAFEID(PersonContact.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Person Contact Id</label>
    <type>Text</type>
</CustomField>