force-app/main/default/objects/Account/fields/Contactos_principales__c.field-meta.xml
<CustomField>
    <fullName>Contactos_principales__c</fullName>
    <label>Contactos principales</label>
    <summaryFilterItems>
        <field>Contacto_de_paciente__c.Principal__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Contacto_de_paciente__c.Paciente__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>