force-app/main/default/objects/Account/fields/Correo_electronico_de_Contacto_3__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_de_Contacto_3__c</fullName>
    <label>Correo electronico de Contacto 3</label>
    <type>Email</type>
</CustomField>