force-app/main/default/objects/Account/fields/Correo_electronico_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Correo_electronico_de_Contacto__c</fullName>
    <label>Correo electronico de Contacto</label>
    <type>Email</type>
</CustomField>