force-app/main/default/objects/Account/fields/Creado_primer_caso_de_visita__c.field-meta.xml
<CustomField>
    <fullName>Creado_primer_caso_de_visita__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creado primer caso de visita</label>
    <type>Checkbox</type>
</CustomField>