force-app/main/default/objects/Account/fields/Cuenta_General__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_General__c</fullName>
    <formula>IF( ISPICKVAL( Sanatorio__c , &quot;San Jose&quot;) , &quot;FEDERACIÓN DE CIRCULOS CATÓLICOS DE OBREROS S.A&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta General</label>
    <type>Text</type>
</CustomField>