force-app/main/default/objects/Account/fields/Cuit__c.field-meta.xml
<CustomField>
    <fullName>Cuit__c</fullName>
    <label>Cuit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>