force-app/main/default/objects/Account/fields/CUSTOMERACCOUNTGRP__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERACCOUNTGRP__c</fullName>
    <label>Customer account group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>