force-app/main/default/objects/Account/fields/CUSTOMERCLASS__c.field-meta.xml
<CustomField>
    <fullName>CUSTOMERCLASS__c</fullName>
    <label>Customer class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>