force-app/main/default/objects/Account/fields/Dado_de_alta__c.field-meta.xml
<CustomField>
    <fullName>Dado_de_alta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dado de alta</label>
    <type>Checkbox</type>
</CustomField>