force-app/main/default/objects/Account/fields/Dan360_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CountryCode__c</fullName>
    <label>Código de país</label>
    <length>255</length>
    <type>Text</type>
</CustomField>