force-app/main/default/objects/Account/fields/Dan360_CountyCode__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CountyCode__c</fullName>
    <description>Código de localidad</description>
    <label>Código de localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>