force-app/main/default/objects/Account/fields/Dan360_CustomerAccountGroup__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerAccountGroup__c</fullName>
    <label>Grupo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>