force-app/main/default/objects/Account/fields/Dan360_CustomerClassification__c.field-meta.xml
<CustomField>
    <fullName>Dan360_CustomerClassification__c</fullName>
    <label>Clasificación del cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>