force-app/main/default/objects/Account/fields/Dan360_DireccionFacturacionComunidad__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DireccionFacturacionComunidad__c</fullName>
    <formula>RecordType.Name + &quot;:&quot; + &quot; &quot; + BillingStreet + &quot; &quot; +  BillingCity + &quot; &quot; + BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dirección Facturación Comunidad</label>
    <type>Text</type>
</CustomField>