force-app/main/default/objects/Account/fields/Dan360_DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>Dan360_DistributionChannel__c</fullName>
    <description>Canal de Distribución</description>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>