force-app/main/default/objects/Account/fields/Dan360_Email__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>