force-app/main/default/objects/Account/fields/Dan360_EsCuentaHijo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_EsCuentaHijo__c</fullName>
    <formula>If(ISBLANK(ParentId), False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es Cuenta Hijo?</label>
    <type>Checkbox</type>
</CustomField>