force-app/main/default/objects/Account/fields/Dan360_Habilitado__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Habilitado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que hace referencia a que una cuenta principal pueda directamente generar pedidos.</description>
    <label>Habilitado</label>
    <type>Checkbox</type>
</CustomField>