force-app/main/default/objects/Account/fields/Dan360_ListaPrecios__c.field-meta.xml
<CustomField>
    <fullName>Dan360_ListaPrecios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>