force-app/main/default/objects/Account/fields/Dan360_OrdenDeCompra__c.field-meta.xml
<CustomField>
    <fullName>Dan360_OrdenDeCompra__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campor que hace referncia a que el ciente requiere OC.</description>
    <label>Orden de Compra</label>
    <type>Checkbox</type>
</CustomField>