force-app/main/default/objects/Account/fields/Dan360_SalesDistric1__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistric1__c</fullName>
    <label>Sales District</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acceso</fullName>
            </value>
            <value>
                <fullName>Disprofarma</fullName>
            </value>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>DistribuidoresLicitaciones</fullName>
                <isActive>false</isActive>
                <label>DistribuidoresLicitaciones</label>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>Farmacias</fullName>
            </value>
            <value>
                <fullName>Farmacity</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Instituciones</fullName>
            </value>
            <value>
                <fullName>INTERCO</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Licitaciones</fullName>
            </value>
            <value>
                <fullName>LicitacionesDistribuidores</fullName>
                <isActive>false</isActive>
                <label>LicitacionesDistribuidores</label>
            </value>
            <value>
                <fullName>LicitacionesDistribuidoresLicitacionesDistribuidores</fullName>
                <isActive>false</isActive>
                <label>LicitacionesDistribuidoresLicitacionesDistribuidores</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Proximity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>