force-app/main/default/objects/Account/fields/Dan360_SalesDistrict__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistrict__c</fullName>
    <description>Campo que indicará a qué cuentas podrá acceder un usuario.</description>
    <label>Sales district</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dan360_SalesDistrict</valueSetName>
    </valueSet>
</CustomField>