force-app/main/default/objects/Account/fields/Dan360_SalesDistrictColaborationRule__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesDistrictColaborationRule__c</fullName>
    <description>Campo que sera utilizado para las reglas de colaboración</description>
    <label>Sales District Colaboration Rule</label>
    <length>250</length>
    <type>Text</type>
</CustomField>