force-app/main/default/objects/Account/fields/Dan360_SalesOrganization__c.field-meta.xml
<CustomField>
    <fullName>Dan360_SalesOrganization__c</fullName>
    <description>Campo donde se especifica la organización de ventas perteneciente.</description>
    <label>Sales organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>