force-app/main/default/objects/Account/fields/Dan360_StoreEAN__c.field-meta.xml
<CustomField>
    <fullName>Dan360_StoreEAN__c</fullName>
    <description>Es el identificador a nivel mundial del cliente.</description>
    <label>GLN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>