force-app/main/default/objects/Account/fields/Dan360_Subcanal__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Subcanal__c</fullName>
    <label>Subcanal</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distribuidores</fullName>
            </value>
            <value>
                <fullName>Care Home</fullName>
            </value>
            <value>
                <fullName>Home Care</fullName>
            </value>
            <value>
                <fullName>Institución de Salud</fullName>
            </value>
            <value>
                <fullName>Licitaciones</fullName>
            </value>
            <value>
                <fullName>Special Sales</fullName>
            </value>
            <value>
                <fullName>Pagadores</fullName>
            </value>
            <value>
                <fullName>Convenios (Pami)</fullName>
            </value>
            <value>
                <fullName>Disprofarma</fullName>
            </value>
            <value>
                <fullName>Farmacity</fullName>
            </value>
            <value>
                <fullName>Farmacias</fullName>
            </value>
            <value>
                <fullName>Carrefour</fullName>
            </value>
            <value>
                <fullName>Cencosud</fullName>
            </value>
            <value>
                <fullName>Coto</fullName>
            </value>
            <value>
                <fullName>Día</fullName>
            </value>
            <value>
                <fullName>La Anonima</fullName>
            </value>
            <value>
                <fullName>Wal - Mart</fullName>
            </value>
            <value>
                <fullName>Modern Trade</fullName>
            </value>
            <value>
                <fullName>Modern Trade DISTR</fullName>
            </value>
            <value>
                <fullName>Pañaleras</fullName>
            </value>
            <value>
                <fullName>Proximity</fullName>
            </value>
            <value>
                <fullName>E-COMMERCE</fullName>
            </value>
            <value>
                <fullName>Magento</fullName>
            </value>
            <value>
                <fullName>Mercado Libre</fullName>
            </value>
            <value>
                <fullName>INTERCO</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
            <value>
                <fullName>OBRAS SOCIALES</fullName>
            </value>
            <value>
                <fullName>HOME CARE &amp; HOSPITALS</fullName>
            </value>
            <value>
                <fullName>PARTNER</fullName>
            </value>
            <value>
                <fullName>PREPAGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>