force-app/main/default/objects/Account/fields/Dan360_TelefonoSecundario__c.field-meta.xml
<CustomField>
    <fullName>Dan360_TelefonoSecundario__c</fullName>
    <label>Teléfono secundario</label>
    <type>Phone</type>
</CustomField>