force-app/main/default/objects/Account/fields/Dan360_UnidadDeNegocio__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadDeNegocio__c</fullName>
    <label>Unidad de Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMN</fullName>
            </value>
            <value>
                <fullName>NuBa</fullName>
            </value>
            <value>
                <fullName>Ambas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>