force-app/main/default/objects/Account/fields/Datos_cliente__c.field-meta.xml
<CustomField>
    <fullName>Datos_cliente__c</fullName>
    <description>Campo para utilizar en los lookup de cuenta.</description>
    <formula>Dan360_DireccionFacturacionComunidad__c + &apos; &apos; + &apos;Id SAP: &apos; +  &apos; &apos; + Id_SAP__c + &apos; &apos; + &apos;Cuit: &apos; +  Cuit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datos cliente</label>
    <type>Text</type>
</CustomField>