force-app/main/default/objects/Account/fields/Derivador__c.field-meta.xml
<CustomField>
    <fullName>Derivador__c</fullName>
    <label>Derivador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin asignar</fullName>
            </value>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>