force-app/main/default/objects/Account/fields/Desde_Horas_2__c.field-meta.xml
<CustomField>
    <fullName>Desde_Horas_2__c</fullName>
    <label>Hora desde</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Horas</valueSetName>
    </valueSet>
</CustomField>