force-app/main/default/objects/Account/fields/Desde_Intervalo__c.field-meta.xml
<CustomField>
    <fullName>Desde_Intervalo__c</fullName>
    <label>Desde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>