force-app/main/default/objects/Account/fields/Destinatario__c.field-meta.xml
<CustomField>
    <fullName>Destinatario__c</fullName>
    <label>Destinatario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>