force-app/main/default/objects/Account/fields/Detalle_de_hijos__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_hijos__c</fullName>
    <label>Detalle de hijos</label>
    <type>TextArea</type>
</CustomField>