force-app/main/default/objects/Account/fields/Dia_Hasta__c.field-meta.xml
<CustomField>
    <fullName>Dia_Hasta__c</fullName>
    <label>Hasta el día</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lunes</fullName>
            </value>
            <value>
                <fullName>Martes</fullName>
            </value>
            <value>
                <fullName>Miércoles</fullName>
            </value>
            <value>
                <fullName>Jueves</fullName>
            </value>
            <value>
                <fullName>Viernes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>