force-app/main/default/objects/Account/fields/Dias_desde_el_ultimo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Dias_desde_el_ultimo_contacto__c</fullName>
    <formula>TODAY() - Ultimo_llamado_de_seguimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días desde el último contacto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>