force-app/main/default/objects/Account/fields/Dias_en_este_estado__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_este_estado__c</fullName>
    <formula>TODAY()- Fecha_de_cambio_de_estado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Días en este estado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>