force-app/main/default/objects/Account/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <inlineHelpText>Ingrese CALLE ALTURA PISO DPTO</inlineHelpText>
    <label>Direccion</label>
    <length>35</length>
    <type>Text</type>
</CustomField>