force-app/main/default/objects/Account/fields/Direccion_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Direccion_de_entrega__c</fullName>
    <label>Dirección de entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domicilio Particular</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Delegación Obra Social</fullName>
            </value>
            <value>
                <fullName>Instituciones</fullName>
            </value>
            <value>
                <fullName>Geriátrico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>